fix bug overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,7 +35,7 @@
   src: url("/assets/font/Questrial/Questrial-Regular.ttf");
 }
 
-body {
+html, body {
   font-family: "Montserrat", sans-serif;
   overflow-x: hidden;
   overflow-y: scroll;
